# CVolt

./: .gitignore  CMakeLists.txt  LICENSE  OperatorsPriority.txt  README.md
Include/: ASTNodes.h  Arena.h  BufferView.h  Compiler.h  CompilerTypes.h  DataType.h  DefaultFunction.h  DefaultFunctions.h  Errors.h  FunctionSignature.h  Hash.h  LLVMCompiler.h  Lexer.h  Object.h  Operator.h  Parser.h  PrimitiveDataType.h  TypeDefs.h  TypedValue.h
Include/Volt/ADT/: Array.h  ArrayAllocator.h  ArrayIterator.h  FixedMap.h  String.h
Include/Volt/Compiler/: LLVMCompiler.h
Include/Volt/Compiler/CompileTime/: CTimeValue.h
Include/Volt/Compiler/Functions/: DefaultFunctions.h  FunctionSignature.h
Include/Volt/Compiler/Hash/: DataTypeHash.h  FunctionSignatureHash.h  Hash.h
Include/Volt/Compiler/Types/: DataType.h  DataTypeBase.h  DataTypeUtils.h  TypedValue.h
Include/Volt/Core/AST/: ASTNodes.h
Include/Volt/Core/Builder/: Builder.h
Include/Volt/Core/BuiltinFunctions/: BuiltinFunctionTable.h  BuiltinFunctions.h
Include/Volt/Core/CompilationContext/: CompilationContext.h
Include/Volt/Core/Enums/: LexErrorType.h  OperatorType.h  ParseErrorType.h  TokenType.h  TypeErrorKind.h
Include/Volt/Core/Errors/: Error.h  Errors.h  LexError.h  ParseError.h  TypeError.h
Include/Volt/Core/Functions/: BuiltinFuncCallee.h  Callee.h  FunctionCallee.h
Include/Volt/Core/Lexer/: Lexer.h  Token.h
Include/Volt/Core/Memory/: Arena.h  BufferView.h
Include/Volt/Core/Object/: Object.h
Include/Volt/Core/Parser/: Parser.h
Include/Volt/Core/Parser/Operators/: Operator.h
Include/Volt/Core/TypeChecker/: TypeChecker.h
Include/Volt/Core/TypeDefs/: FunctionTable.h  IntTypeDefs.h  TypeDefs.h  VariableTable.h
Include/Volt/Core/Types/: DataType.h  DataTypeUtils.h  TypeDefs.h
Include/Volt/Debug/DebugOutput/: DebugOutput.h
Include/Volt/Tests/Fuzzer/: ParserFuzzer.h
Resources/: test.volt
Src/: Arena.cpp  BufferView.cpp  Builder.cpp  BuiltinFunctionTable.cpp  CTimeValue.cpp  CompilationContext.cpp  Compiler.cpp  DataType.cpp  DataTypeHash.cpp  DataTypeUtils.cpp  Errors.cpp  FunctionSignature.cpp  FunctionSignatureHash.cpp  Hash.cpp  LLVMCompiler.cpp  LexError.cpp  Lexer.cpp  Operator.cpp  ParseError.cpp  Parser.cpp  ParserFuzzer.cpp  Token.cpp  TypeChecker.cpp  TypeError.cpp  TypedValue.cpp  main.cpp
Tests/Lexer/: 1.volt
VoltFiles/: test.volt
